# provenance-recorder

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
docs/: CHANGELOG.md  JSON_SCHEMA.md  TODO.md  USAGE.md
examples/minimal-python/: params.yaml
prov/: cli.py  config.py  diff.py  env.py  gitinfo.py  hashing.py  indexdb.py  initcmd.py  output_json.py  record.py  repair.py  resolve.py  runid.py  runstore.py  showcmd.py  tagging.py  version.py
tests/: conftest.py  test_cli_diff.py  test_cli_json_contract.py  test_cli_show.py  test_cli_show_diff_integration.py  test_cli_tag_integration.py  test_diff.py  test_diff_unit.py  test_runstore_refs.py  test_tagging.py
